[metadata]
name = Payton
version = v1.1.5
author = Sinan Islekdemir
author_email = sinan@islekdemir.com
description = "3D Graphics Programming Toolkit"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sinanislekdemir/payton
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = payton
packages = find:
python_requires = >=3.8

[options.packages.find]
where = payton

[flake8]
max-line-length = 120
ignore = E203,W503
max-complexity = 25

[pylama:pycodestyle]
max_line_length = 120
ignore = E203, C901