[metadata]
name = Payton
version = v1.3.3
author = Sinan Islekdemir
author_email = sinan@islekdemir.com
description = "3D Graphics Programming Toolkit"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sinanislekdemir/payton
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.10
include_package_data = True
install_requires =
    Pillow >=10.3.0
    PyOpenGL >=3.1.7
    pyrr >=0.10.3
    PySDL2 >=0.9.16
    Cython >=3.0.5
    numpy >=1.26.4

[flake8]
max-line-length = 120
ignore = E203,W503
max-complexity = 25

[pylama:pycodestyle]
max_line_length = 120
ignore = E203, C901
